shared/css/custom_styles.css
/* ... */
button#showRelatedDataBtn.btn-xs {
	display: inline-block;
	font-weight: 500;
	text-align: center;
	cursor: pointer;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	background-color: transparent;
	border: 1px solid #aaa;
	padding: .15rem .5rem .22rem .5rem;
	font-size: .875rem;
	line-height: 1.15rem;
	border-radius: .2rem;
	color: #006ee3;
}
.btn-outline-primary {
	background-color: white;
}
.btn-info {
	color: #fff;
	background-color: #17a2b8;
	border: 1px solid hsl(0, 0%, 62%);
}
.btn-outline-success {
	color: #28a745;
	border-color: #28a745;
}
.date-field-forms {
	padding: .4rem .8rem .5rem .8rem;
	margin: .5rem .9rem .2rem 1.2rem;
}
/************************
*************************
BELOW: Main button (bootstrap override)
************************/
button:focus, input:focus, select:focus, button.focus, input.focus, select.focus {
	outline: 0;
	border: 1px dotted #ccc;
	box-shadow: 0 0 0 0.18rem rgb(0 123 255 / 40%);
	border-radius: .2rem;
}
span.data-entry-addon {
	cursor: pointer;
}
.btn-primary {
	background-color: #d9f1f3;
	border: 1px solid hsl(0, 0%, 56%, 1);
	color: buttontext;
}
.btn-sm {
	margin-top: 0;
	height: calc(1.5rem + .5rem + 1px);
}
.btn-primary:hover {
	/*background-color: #d3dfe0;*/
	color: #212529;
	background-color: #deebec;
	background: #deebec;
	border: 1px solid hsl(0, 2%, 47%);
}
.btn-primary:focus, .btn-primary.focus, span.data-entry-addon.focus, span.data-entry-addon:focus {
	background-color: #deebec;
	color: #212529;
	border: 1px solid #ced4da;
	outline: 0;
	box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
}
.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
	background-color: #deebec;
	color: #212529;
	border: 1px solid #ced4da;
}
.btn-powder-blue {
	color: #1b1b1b;
	letter-spacing: .04rem;
	background-color: #d9e8fa;
	border: 1px solid hsl(0, 0%, 62%);
	font-size: small;
	font-weight: 490;
}
.btn-powder-blue:hover {
	/*background-color: #d3dfe0;*/
	color: #fff;
	background: #54a4f9;
	letter-spacing: .04rem;
	border: 1px solid hsl(0, 2%, 47%);
}
.btn-secondary {
	background-color: #d7d7d7;
	background: #d7d7d7;
	border: 1px solid hsl(0, 0%, 62%);
	color: #212529;
	margin-top: 0;
}
.btn-secondary:hover {
	color: #212529;
	border: 1px solid hsl(0, 2%, 47%);
	background-color: rgba(220, 220, 220, .8);
}
.btn-secondary:focus, .btn-secondary.focus {
	background-color: #d7d7d7;
	color: #212529;
	border: 1px solid hsl(0, 2%, 47%);
	border-color: #ced4da;
	outline: 0;
	box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
}
.btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
	background-color: #d7d7d7;
	color: #212529;
	border: 1px solid hsl(0, 2%, 47%);
}
.btn-secondary.disabled, .btn-secondary:disabled {
	background-color: #d7d7d7;
	color: #999;
	border: 1px solid hsl(0, 2%, 47%);
	box-shadow: 0 0 0 0.02rem rgba(255, 255, 255, 0.5);
	box-shadow: none;
}
.btn-warning {
	background-color: #ffc10782;
	background: #ffc10782;
	border: 1px solid hsl(0, 0%, 56%, 1);
	color: buttontext;
	margin-top: 0;
}
.btn-warning:hover {
	background-color: #f5bd12ba;
	color: #212529;
	border: 1px solid hsl(0, 2%, 47%);
}
.btn-warning:focus, .btn-warning.focus {
	background-color: #f5bd12ba;
	color: #212529;
	border: 1px solid hsl(0, 2%, 47%);
	border-color: #ced4da;
	outline: 0;
	box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
}
.btn-warning:not(:disabled):not(.disabled):active, .btn-warning:not(:disabled):not(.disabled).active, .show > .btn-warning.dropdown-toggle {
	background-color: #f5bd12ba;
	color: #212529;
	border: 1px solid hsl(0, 2%, 47%);
}
.btn-warning.disabled, .btn-warning:disabled {
	background-color: #f5bd12ba;
	color: #999;
	border: 1px solid hsl(0, 2%, 47%);
	box-shadow: 0 0 0 0.02rem rgba(255, 255, 255, 0.5);
	box-shadow: none;
}
.jqx-grid-cell {
	border-width: 0px 1px 1px 1px;
	border-color: buttonface;
}
.jqx-grid-cell a {
	padding-left: .3rem;
}
.jqx-grid-cell a.focus, .jqx-grid-cell a:focus {
	text-decoration: underline;
	box-shadow: 0 0 0 0.02rem rgba(255, 255, 255, 0.5);
	box-shadow: none;
}
.text-success {
	color: #1e5d16 !important;
}
.btn-outline-success {
	border-color: #1e5d16 !important;
}
.btn-danger {
	background-color: #f8d7da;
	background: #f8d7da;
	border: 1px solid hsl(0, 0%, 56%, 1);
	color: #c82333;
	margin-top: 0;
}
.btn-primary.disabled, .btn-primary:disabled, .btn-secondary:disabled, .btn-secondary.disabled, .btn-warning.disabled, .btn-warning:disabled, .btn-danger.disabled, .btn-danger:disabled {
	background-color: #d7d7d7;
	color: #999;
	border: 1px solid hsl(0, 2%, 47%);
	box-shadow: 0 0 0 0.02rem rgba(255, 255, 255, 0.5);
	box-shadow: none;
}

/************************
BELOW: Cell styles for specimen search results grids
used by cellclassname functions in the results grids
************************/
.primaryTypeCell { 
	background-color: #ffe1e1\9;
}
.secondaryTypeCell { 
	background-color: #e8f1ff\9;
} 
.primaryTypeCell.jqx-grid-cell-pinned { 
	background-color: #eedbdb\9;
}
.secondaryTypeCell.jqx-grid-cell-pinned { 
	background-color: #e1edff\9;
}
/** base classes above have transparency to tint with hover/selected, :not classes below give solid color when not hover/selected **/
.primaryTypeCell:not(.jqx-grid-cell-hover):not(.jqx-grid-cell-selected), .jqx-widget .primaryTypeCell:not(.jqx-grid-cell-hover):not(.jqx-grid-cell-selected) {  
	background-color: #ffe1e1;
}
.secondaryTypeCell:not(.jqx-grid-cell-hover):not(.jqx-grid-cell-selected), .jqx-widget .secondaryTypeCell:not(.jqx-grid-cell-hover):not(.jqx-grid-cell-selected) {  
	background-color: #e8f1ff;
} 
.jqx-grid-cell-pinned.primaryTypeCell:not(.jqx-grid-cell-hover):not(.jqx-grid-cell-selected), .jqx-widget .jqx-grid-cell-pinned.primaryTypeCell:not(.jqx-grid-cell-hover):not(.jqx-grid-cell-selected) {  
	background-color: #eedbdb;
}
/* ... */

